# dev_containers

./: .gitignore  README.md
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json  gitconfig-identity.sh  install-packages.sh
.devcontainer/alpine/: Dockerfile  devcontainer.json  install-packages.sh
.devcontainer/ubuntu/: Dockerfile
.github/: FUNDING.yml
.github/workflows/: ci-cd.yml  cicd-cpp.yml  cicd-hugo.yml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/optimize_cpp_devcontainer_20260302/: metadata.json  plan.md
conductor/tracks/optimize_cpp_devcontainer_20260302/: analysis.md  index.md  plan.md  spec.md
devcontainer/: Dockerfile  devcontainer.json
src/cpp-linux/.devcontainer/: Dockerfile  devcontainer.json  install-base.sh  install-cmake.sh  install-gcc.sh  install-llvm.sh  install-packages.sh  install-vcpkg.sh
src/cpp/.devcontainer/: .dockerignore  Dockerfile  devcontainer.json  install-packages.sh  install-vcpkg.sh
src/cpp/.devcontainer/cppmicrosoft/: devcontainer.json  install-packages.sh
src/hugo/.devcontainer/: Dockerfile  devcontainer.json  install-packages.sh
tests/: test_analysis_report.ps1  test_analysis_report.sh  verify_devcontainer.sh  verify_image_size.ps1  verify_toolchain.ps1
tests/sample-cpp-project/: CMakeLists.txt  main.cpp
